// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/food-and-drinks should render 1`] = `
"<!-- wp:coblocks/food-and-drinks -->
<div class="wp-block-coblocks-food-and-drinks has-columns has-responsive-columns has-2-columns has-medium-gutter" data-columns="2" itemscope itemtype="http://schema.org/Menu"></div>
<!-- /wp:coblocks/food-and-drinks -->"
`;

exports[`coblocks/food-and-drinks should render column classes 1`] = `
"<!-- wp:coblocks/food-and-drinks {"columns":1} -->
<div class="wp-block-coblocks-food-and-drinks has-medium-gutter" data-columns="1" itemscope itemtype="http://schema.org/Menu"></div>
<!-- /wp:coblocks/food-and-drinks -->"
`;

exports[`coblocks/food-and-drinks should render column classes 2`] = `
"<!-- wp:coblocks/food-and-drinks -->
<div class="wp-block-coblocks-food-and-drinks has-columns has-responsive-columns has-2-columns has-medium-gutter" data-columns="2" itemscope itemtype="http://schema.org/Menu"></div>
<!-- /wp:coblocks/food-and-drinks -->"
`;

exports[`coblocks/food-and-drinks should render column classes 3`] = `
"<!-- wp:coblocks/food-and-drinks {"columns":3} -->
<div class="wp-block-coblocks-food-and-drinks has-columns has-responsive-columns has-3-columns has-medium-gutter" data-columns="3" itemscope itemtype="http://schema.org/Menu"></div>
<!-- /wp:coblocks/food-and-drinks -->"
`;

exports[`coblocks/food-and-drinks should render column classes 4`] = `
"<!-- wp:coblocks/food-and-drinks {"columns":4} -->
<div class="wp-block-coblocks-food-and-drinks has-columns has-responsive-columns has-4-columns has-medium-gutter" data-columns="4" itemscope itemtype="http://schema.org/Menu"></div>
<!-- /wp:coblocks/food-and-drinks -->"
`;

exports[`coblocks/food-and-drinks should render images 1`] = `
"<!-- wp:coblocks/food-and-drinks {"showImages":0} -->
<div class="wp-block-coblocks-food-and-drinks has-columns has-responsive-columns has-2-columns has-medium-gutter" data-columns="2" itemscope itemtype="http://schema.org/Menu"></div>
<!-- /wp:coblocks/food-and-drinks -->"
`;

exports[`coblocks/food-and-drinks should render images 2`] = `
"<!-- wp:coblocks/food-and-drinks {"showImages":1} -->
<div class="wp-block-coblocks-food-and-drinks has-columns has-responsive-columns has-2-columns has-medium-gutter" data-columns="2" itemscope itemtype="http://schema.org/Menu"></div>
<!-- /wp:coblocks/food-and-drinks -->"
`;

exports[`coblocks/food-and-drinks should render prices 1`] = `
"<!-- wp:coblocks/food-and-drinks {"showPrices":0} -->
<div class="wp-block-coblocks-food-and-drinks has-columns has-responsive-columns has-2-columns has-medium-gutter" data-columns="2" itemscope itemtype="http://schema.org/Menu"></div>
<!-- /wp:coblocks/food-and-drinks -->"
`;

exports[`coblocks/food-and-drinks should render prices 2`] = `
"<!-- wp:coblocks/food-and-drinks {"showPrices":1} -->
<div class="wp-block-coblocks-food-and-drinks has-columns has-responsive-columns has-2-columns has-medium-gutter" data-columns="2" itemscope itemtype="http://schema.org/Menu"></div>
<!-- /wp:coblocks/food-and-drinks -->"
`;
